# hackathon3-backend

./: .pdm-python  BACKEND_GUIDE.md  Dockerfile  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  PYTHON_LEARNING_GUIDE.md  README.md  STATUS.md  add_teacher_table.py  call_seed.py  debug_auth.py  detailed_server_log.txt  init_db.py  inspect_test.db  learnflow.db  main.py  patch_pydantic.py  pyproject.toml  quick_seed.py  run_server.py  seed_python_content.py  setup.bat  setup.sh  start_server.py  test.db  test_auth.py  test_levels.py  test_login.py  test_serialization.py  test_server.py  test_simple_auth.py  test_teacher_login.py
app/: __init__.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  analytics.py  auth.py  chat.py  exercises.py  progress.py  quizzes.py  submissions.py  teacher_dashboard.py  topics.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  ai_service.py  auth_service.py  chat_service.py  dapr_service.py  enhanced_kafka_service.py  exercise_service.py  kafka_service.py
components/: components.yaml
tests/: conftest.py  test_auth.py  test_exercises.py  test_submissions.py
