[project]
name = "learnflow-backend"
version = "1.0.0"
description = "LearnFlow AI Educational Platform Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "sqlalchemy>=2.0.29",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "httpx==0.23.3",
    "aiokafka>=0.13.0",
    "openai>=1.0.0",
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "dapr>=1.12.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
