[tool.poetry]
name = "learnflow-backend"
version = "1.0.0"
description = "LearnFlow AI Educational Platform Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[project]
name = "learnflow-backend"
version = "1.0.0"
description = "LearnFlow AI Educational Platform Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "pydantic[email]>=2.0.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "httpx==0.23.3",
    "aiokafka>=0.13.0",
    "openai>=2.16.0",
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "dapr>=1.16.1",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"